[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'ARBOLpy'
version = '0.0.8'
authors = [
	{ names=['Kyle Kimler','Ruben van Esch'], email='kkimler@broadinstitute.org'}
]
description = 'python implementation of ARBOL scRNAseq iterative tiered clustering\nhttps://github.com/jo-m-lab/ARBOL'
readme= 'README.md'

requires-python = '>=3.8'


classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'scanpy>=1.9.0',
    'anytree>=2.8.0',
    'pandas>=1.0.5',
    'numpy>=1.18.5',
    'matplotlib>=3.5.1',
    'scipy>=1.4.1',
    'leidenalg>=0.8'

]

[project.urls]
"Homepage" = 'https://github.com/jo-m-lab/ARBOLpy'
"Bug Tracker" = 'https://github.com/jo-m-lab/ARBOLpy/issues'

[tool.setuptools.packages.find]
where = ["ARBOLpy"]
include = ["ARBOL*"]