
[metadata]
name = ARBOLpy-kkimler
version = 0.0.1
author = Kyle Kimler, Ruben van Esch
author_email = kylejkimler@gmail.com
description = python implementation of ARBOL scRNAseq iterative tiered clustering https://github.com/jo-m-lab/ARBOL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jo-m-lab/ARBOLpy
project_urls =
    Bug Tracker = https://github.com/jo-m-lab/ARBOLpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = ARBOLpy
packages = find:
python_requires = >=3.8
install_requires =
    scanpy >= 1.9.0
    anytree >= 2.8.0
    pandas >= 1.0.5
    numpy >= 1.18.5
    matplotlib >= 3.5.1
    scipy >= 1.4.1


[options.packages.find]
where = ARBOLpy